floating label fix on mobile

--- a/parris-marketing-landing-page/src/components/main/forms/Form.css
+++ b/parris-marketing-landing-page/src/components/main/forms/Form.css
@@ -98,6 +98,13 @@ form .card-header {
     margin-bottom: 0;
   }
 
+  .form-floating > .form-control-plaintext:focus,
+  .form-floating > .form-control-plaintext:not(:placeholder-shown),
+  .form-floating > .form-control:focus,
+  .form-floating > .form-control:not(:placeholder-shown) {
+    padding-top: 1.3rem;
+  }
+
   .form-section .card-header {
     padding: 0;
   }
@@ -123,7 +130,7 @@ form .card-header {
   .form-floating > .form-control,
   .form-floating > .form-control-plaintext,
   .form-floating > .form-select {
-    line-height: 4;
+    line-height: 1.5;
   }
 
   .form-section {
